--- a/templates/desert/index.html.twig
+++ b/templates/desert/index.html.twig
@@ -35,14 +35,7 @@ content %}
       <div class="col-md-9 content animals-intro">
         <h1 class="animals-title">Désert</h1>
         <p class="intro-animals">
-          Bienvenue dans notre zoo, une oasis de découverte au cœur de la nature
-          sauvage. Explorez notre désert reconstitué, un monde de vastes enclos
-          rocailleux et de ciels infinis. Ici, la vie prospère malgré les défis,
-          avec des créatures extraordinaires adaptées à ce milieu unique.
-          Rencontrez le majestueux cobra royal, le charmant fennec, la
-          redoutable vipère du désert, le gracieux dromadaire et l'insaisissable
-          iguane du désert, chacun illustrant une résilience remarquable dans ce
-          paysage désolé mais magnifique.
+          {{ habitat.description }}
         </p>
       </div>
     </div>
@@ -52,8 +45,8 @@ content %}
     <div class="service1">
       <article class="description">
         <p>
-          Prénom : Nick <br />
-          Race : Vipère des sables <br />
+          Prénom : {{ animal1.prenom }} <br />
+          Race : {{ animal1.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
@@ -61,10 +54,10 @@ content %}
         <div style="display: none">
           Habitat : Zones désertiques d'Afrique du Nord et du Moyen-Orient
           <br />
-          État de l'animal : <br />
-          Nourriture proposée : petits mammifères, oiseaux, lézards <br />
-          Grammage de la nourriture : 100 grammes <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal1.etatAnimal }} <br />
+          Nourriture proposée : {{ animal1.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal1.grammagenourriture }} <br />
+          Date de passage : {{ animal1.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Nick" class="jaime-btn">❤️ J'aime</button>
@@ -88,18 +81,18 @@ content %}
       </article>
       <article class="description">
         <p>
-          Prénom : Feunard <br />
-          Race : Fennec <br />
+          Prénom : {{ animal2.prenom }} <br />
+          Race : {{ animal2.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Déserts d'Afrique du Nord <br />
-          État de l'animal : <br />
-          Nourriture proposée : petits rongeurs, insectes, fruits <br />
-          Grammage de la nourriture : 50 à 100 grammes <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal2.etatAnimal }}<br />
+          Nourriture proposée : {{ animal2.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal2.grammagenourriture }} <br />
+          Date de passage : {{ animal2.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Feunard" class="jaime-btn">❤️ J'aime</button>
@@ -111,18 +104,18 @@ content %}
     <div class="service3">
       <article class="description">
         <p>
-          Prénom : Abo <br />
-          Race : Cobra royal <br />
+          Prénom : {{ animal3.prenom }} <br />
+          Race : {{ animal3.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales, plaines et déserts d'Asie <br />
-          État de l'animal : <br />
-          Nourriture proposée : petits mammifères, oiseaux, reptiles <br />
-          Grammage de la nourriture : 100 à 200 grammes <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal3.etatAnimal }}<br />
+          Nourriture proposée : {{ animal3.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal3.grammagenourriture }} <br />
+          Date de passage : {{ animal3.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Abo" class="jaime-btn">❤️ J'aime</button>
@@ -146,18 +139,18 @@ content %}
       </article>
       <article class="description">
         <p>
-          Prénom : Doma <br />
-          Race : Dromadaire <br />
+          Prénom : {{ animal4.prenom }} <br />
+          Race : {{ animal4.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Déserts d'Afrique du Nord et du Moyen-Orient <br />
-          État de l'animal : <br />
-          Nourriture proposée : herbes, feuilles, graines <br />
-          Grammage de la nourriture : 5 à 10 kg <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal4.etatAnimal }}<br />
+          Nourriture proposée : {{ animal4.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal4.grammagenourriture }} <br />
+          Date de passage : {{ animal4.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Doma" class="jaime-btn">❤️ J'aime</button>
@@ -169,18 +162,18 @@ content %}
     <div class="service5">
       <article class="description">
         <p>
-          Prénom : Zed <br />
-          Race : Iguane du désert <br />
+          Prénom : {{ animal5.prenom }} <br />
+          Race : {{ animal5.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Déserts d'Amérique du Nord <br />
-          État de l'animal : <br />
-          Nourriture proposée : végétation désertique, insectes <br />
-          Grammage de la nourriture : 50 à 100 grammes <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal5.etatAnimal }}<br />
+          Nourriture proposée : {{ animal5.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal5.grammagenourriture }} <br />
+          Date de passage : {{ animal5.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Zed" class="jaime-btn">❤️ J'aime</button>
