--- a/templates/jungle/index.html.twig
+++ b/templates/jungle/index.html.twig
@@ -35,13 +35,7 @@ content %}
       <div class="col-md-9 content animals-intro">
         <h1 class="animals-title">Jungle</h1>
         <p class="intro-animals">
-          Bienvenue dans la Jungle, un monde d'exploration et de diversité au
-          cœur même de notre zoo. Découvrez l'anaconda, le jaguar, le macaque,
-          le perroquet et le tigre, chacun adapté à ce royaume de végétation
-          dense et de mystère.<br />
-          <br />
-          Plongez dans cet habitat exotique où chaque recoin révèle la beauté et
-          l'ingéniosité de la vie sauvage de la Jungle.
+          {{ habitat.description }}
         </p>
       </div>
     </div>
@@ -50,18 +44,18 @@ content %}
     <div class="service1">
       <article class="description">
         <p>
-          Prénom : Killer <br />
-          Race : Anaconda <br />
+          Prénom : {{ animal1.prenom }}<br />
+          Race : {{ animal1.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Amérique du Sud <br />
-          État de l'animal : <br />
-          Nourriture proposée : petits mammifères, oiseaux, poissons <br />
-          Grammage de la nourriture : 1 à 2 kg <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal1.etatAnimal }} <br />
+          Nourriture proposée : {{ animal1.nourritureProposee }} <br />
+          Grammage de la nourriture : {{ animal1.grammagenourriture }} <br />
+          Date de passage : {{ animal1.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Killer" class="jaime-btn">❤️ J'aime</button>
@@ -84,19 +78,18 @@ content %}
       </article>
       <article class="description">
         <p>
-          Prénom : Garry <br />
-          Race : Jaguar <br />
+          Prénom : {{ animal2.prenom }} <br />
+          Race : {{ animal2.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Amérique du Sud <br />
-          État de l'animal : <br />
-          Nourriture proposée : mammifères de taille moyenne, poissons, oiseaux
-          <br />
-          Grammage de la nourriture : 2 à 3 kg <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal2.etatAnimal }}<br />
+          Nourriture proposée : {{ animal2.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal2.grammagenourriture }} <br />
+          Date de passage : {{ animal2.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Garry" class="jaime-btn">❤️ J'aime</button>
@@ -107,18 +100,18 @@ content %}
     <div class="service3">
       <article class="description">
         <p>
-          Prénom : Kaki <br />
-          Race : Macaque <br />
+          Prénom : {{ animal3.prenom }} <br />
+          Race : {{ animal3.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Asie <br />
-          État de l'animal : <br />
-          Nourriture proposée : fruits, graines, insectes <br />
-          Grammage de la nourriture : 300 à 400 grammes <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal3.etatAnimal }}<br />
+          Nourriture proposée : {{ animal3.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal3.grammagenourriture }} <br />
+          Date de passage : {{ animal3.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Kaki" class="jaime-btn">❤️ J'aime</button>
@@ -141,18 +134,18 @@ content %}
       </article>
       <article class="description">
         <p>
-          Prénom : Spin <br />
-          Race : Perroquet Ara Rouge <br />
+          Prénom : {{ animal4.prenom }} <br />
+          Race : {{ animal4.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales d'Amérique du Sud <br />
-          État de l'animal : <br />
-          Nourriture proposée : fruits, graines, noix <br />
-          Grammage de la nourriture : 150 à 200 grammes <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal4.etatAnimal }}<br />
+          Nourriture proposée : {{ animal4.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal4.grammagenourriture }} <br />
+          Date de passage : {{ animal4.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Spin" class="jaime-btn">❤️ J'aime</button>
@@ -163,18 +156,18 @@ content %}
     <div class="service5">
       <article class="description">
         <p>
-          Prénom : Rex <br />
-          Race : Tigre du Bengale <br />
+          Prénom : {{ animal5.prenom }} <br />
+          Race : {{ animal5.race }} <br />
           <button class="info" onclick="toggleInfo(this)">
             En savoir plus...
           </button>
         </p>
         <div style="display: none">
           Habitat : Forêts tropicales et mangroves d'Asie du Sud <br />
-          État de l'animal : <br />
-          Nourriture proposée : cervidés, sangliers, buffles <br />
-          Grammage de la nourriture : 5 à 7 kg <br />
-          Date de passage : 00/00/2024
+          État de l'animal : {{ animal5.etatAnimal }}<br />
+          Nourriture proposée : {{ animal5.grammagenourriture }} <br />
+          Grammage de la nourriture : {{ animal5.grammagenourriture }} <br />
+          Date de passage : {{ animal5.datePassage|date('d-m-Y H:i') }}
         </div>
         <div class="like-button-container">
           <button id="increment-Rex" class="jaime-btn">❤️ J'aime</button>
