--- a/templates/user_base.html.twig
+++ b/templates/user_base.html.twig
@@ -29,5 +29,6 @@
     <footer>
       <!-- Footer global si nécessaire -->
     </footer>
+    <script src="{{ asset('assets/script/user.js') }}"></script>
   </body>
 </html>
