--- a/templates/user_base.html.twig
+++ b/templates/user_base.html.twig
@@ -27,7 +27,7 @@
     </header>
     <main>{% block content %}{% endblock %}</main>
     <footer>
-      <!-- Footer global si nécessaire -->
+      <!-- footer si besoin -->
     </footer>
     <script src="{{ asset('assets/script/user.js') }}"></script>
   </body>
